--- a/.github/workflows/main_greenz.yml
+++ b/.github/workflows/main_greenz.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'microsoft'
 
       - name: Build with Maven
@@ -32,7 +32,7 @@ jobs:
           path: '${{ github.workspace }}/target/*.war'
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5BDC4FA469044707A3030061F5F48664 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1A6E2FE2A76B44A9AF83D6FB956A620A }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DBD463D4678C4099B89909BC4B64F8DF }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1E91B532ACAC48189B1E94A78E804C08 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_04EDB4284C1F4BB2A21F9765BE00C68E }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_968AB051A3FC4703A97A1AD533C76E92 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
